force-app/main/default/objects/PreferredCourier__c/PreferredCourier__c.object-meta.xml
<CustomObject>
    <label>Preferred Courier</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Preferred Courier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Couriers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>