force-app/main/default/objects/PreferredCourier__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>To indicate to which account these Courier is related</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Preferred Couriers</relationshipLabel>
    <relationshipName>Preferred_Couriers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>