force-app/main/default/objects/PreferredCourier__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate whether this is the default Courier for the account.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>