force-app/main/default/objects/PreferredCourier__c/fields/FlowLabel__c.field-meta.xml
<CustomField>
    <fullName>FlowLabel__c</fullName>
    <formula>TEXT(Courier__c) &amp; &quot; (&quot; &amp;  TEXT(DeliveryRouting__c) &amp; &quot;)&quot;</formula>
    <label>FlowLabel</label>
    <type>Text</type>
</CustomField>