force-app/main/default/objects/PreferredCourier__c/fields/WholeSalerId__c.field-meta.xml
<CustomField>
    <fullName>WholeSalerId__c</fullName>
    <description>WholeSalerId of the selected Courier</description>
    <label>WholeSalerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>